--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/jorgeAgoiz/authMicroservice#readme",
   "dependencies": {
+    "compression": "1.7.4",
+    "cors": "2.8.5",
     "dotenv": "10.0.0",
     "express": "4.17.1",
     "mysql2": "2.2.5",
