--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "cors": "2.8.5",
     "dotenv": "10.0.0",
     "express": "4.17.1",
-    "mysql2": "2.2.5",
-    "sequelize": "6.6.5"
+    "mongodb": "3.6.10",
+    "mongoose": "^5.13.2"
   },
   "devDependencies": {
     "@types/express": "4.17.13",
+    "@types/mongodb": "3.6.20",
     "@types/node": "16.3.0",
-    "@types/validator": "13.6.3",
     "nodemon": "2.0.10",
     "ts-node": "10.0.0",
     "typescript": "4.3.5"
