--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/jorgeAgoiz/authMicroservice#readme",
   "dependencies": {
+    "bcrypt": "5.0.1",
     "compression": "1.7.4",
     "cors": "2.8.5",
     "dotenv": "10.0.0",
@@ -28,6 +29,7 @@
     "mongoose": "^5.13.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "5.0.0",
     "@types/express": "4.17.13",
     "@types/mongodb": "3.6.20",
     "@types/node": "16.3.0",
