--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "cors": "2.8.5",
     "dotenv": "10.0.0",
     "express": "4.17.1",
+    "helmet": "4.6.0",
     "mongodb": "3.6.10",
-    "mongoose": "^5.13.2"
+    "mongoose": "5.13.2"
   },
   "devDependencies": {
     "@types/bcrypt": "5.0.0",
+    "@types/compression": "1.7.1",
+    "@types/cors": "2.8.12",
     "@types/express": "4.17.13",
     "@types/mongodb": "3.6.20",
     "@types/node": "16.3.0",
