--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "10.0.0",
     "express": "4.17.1",
     "helmet": "4.6.0",
+    "jsonwebtoken": "8.5.1",
     "mongodb": "3.6.10",
     "mongoose": "5.13.2"
   },
@@ -34,6 +35,7 @@
     "@types/compression": "1.7.1",
     "@types/cors": "2.8.12",
     "@types/express": "4.17.13",
+    "@types/jsonwebtoken": "^8.5.4",
     "@types/mongodb": "3.6.20",
     "@types/node": "16.3.0",
     "nodemon": "2.0.10",
