--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/jorgeAgoiz/authMicroservice#readme",
   "dependencies": {
+    "aws-sdk": "^2.946.0",
     "bcrypt": "5.0.1",
     "compression": "1.7.4",
     "cors": "2.8.5",
@@ -28,7 +29,10 @@
     "helmet": "4.6.0",
     "jsonwebtoken": "8.5.1",
     "mongodb": "3.6.10",
-    "mongoose": "5.13.2"
+    "mongoose": "5.13.2",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/bcrypt": "5.0.0",
@@ -37,7 +41,10 @@
     "@types/express": "4.17.13",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/mongodb": "3.6.20",
+    "@types/multer": "^1.4.7",
+    "@types/multer-s3": "^2.7.10",
     "@types/node": "16.3.0",
+    "@types/uuid": "^8.3.1",
     "nodemon": "2.0.10",
     "ts-node": "10.0.0",
     "typescript": "4.3.5"
