--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cors": "2.8.5",
     "dotenv": "10.0.0",
     "express": "4.17.1",
+    "express-rate-limit": "^5.3.0",
     "helmet": "4.6.0",
     "jsonwebtoken": "8.5.1",
     "mongodb": "3.6.10",
@@ -39,6 +40,7 @@
     "@types/compression": "1.7.1",
     "@types/cors": "2.8.12",
     "@types/express": "4.17.13",
+    "@types/express-rate-limit": "^5.1.3",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/mongodb": "3.6.20",
     "@types/multer": "^1.4.7",
