--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongoose": "5.13.2",
     "multer": "^1.4.2",
     "multer-s3": "2.9.0",
+    "nodemailer": "^6.6.3",
     "uuid": "8.3.2"
   },
   "devDependencies": {
@@ -46,6 +47,7 @@
     "@types/multer": "^1.4.7",
     "@types/multer-s3": "2.7.10",
     "@types/node": "16.3.0",
+    "@types/nodemailer": "^6.4.4",
     "@types/uuid": "8.3.1",
     "nodemon": "2.0.10",
     "ts-node": "10.0.0",
