--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Auth Microservice",
   "main": "index.js",
   "scripts": {
-    "start": "node build/index.js",
-    "dev": "nodemon src/index.ts",
+    "test": "cross-env NODE_ENV=test jest --verbose",
+    "start": "cross-env NODE_ENV=production node build/index.js",
+    "dev": "cross-env NODE_ENV=development nodemon src/index.ts",
     "build": "tsc -p ."
   },
   "repository": {
@@ -31,9 +32,9 @@
     "jsonwebtoken": "8.5.1",
     "mongodb": "3.6.10",
     "mongoose": "5.13.2",
-    "multer": "^1.4.2",
+    "multer": "1.4.2",
     "multer-s3": "2.9.0",
-    "nodemailer": "^6.6.3",
+    "nodemailer": "6.6.3",
     "uuid": "8.3.2"
   },
   "devDependencies": {
@@ -42,15 +43,24 @@
     "@types/cors": "2.8.12",
     "@types/express": "4.17.13",
     "@types/express-rate-limit": "5.1.3",
+    "@types/jest": "26.0.24",
     "@types/jsonwebtoken": "8.5.4",
     "@types/mongodb": "3.6.20",
-    "@types/multer": "^1.4.7",
+    "@types/multer": "1.4.7",
     "@types/multer-s3": "2.7.10",
     "@types/node": "16.3.0",
-    "@types/nodemailer": "^6.4.4",
+    "@types/nodemailer": "6.4.4",
     "@types/uuid": "8.3.1",
+    "cross-env": "^7.0.3",
+    "jest": "27.0.6",
     "nodemon": "2.0.10",
+    "ts-jest": "^27.0.3",
     "ts-node": "10.0.0",
     "typescript": "4.3.5"
+  },
+  "eslintConfig": {
+    "env": {
+      "jest": true
+    }
   }
 }
