--- a/package.json
+++ b/package.json
@@ -50,11 +50,13 @@
     "@types/multer-s3": "2.7.10",
     "@types/node": "16.3.0",
     "@types/nodemailer": "6.4.4",
+    "@types/supertest": "2.0.11",
     "@types/uuid": "8.3.1",
     "cross-env": "^7.0.3",
     "jest": "27.0.6",
     "nodemon": "2.0.10",
-    "ts-jest": "^27.0.3",
+    "supertest": "6.1.3",
+    "ts-jest": "27.0.3",
     "ts-node": "10.0.0",
     "typescript": "4.3.5"
   },
