--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Auth Microservice",
   "main": "index.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=test jest --verbose --silent",
+    "test": "cross-env NODE_ENV=test jest --verbose",
     "test:watch": "npm run test -- --watch",
     "start": "cross-env NODE_ENV=production node build/index.js",
     "dev": "cross-env NODE_ENV=development nodemon src/index.ts",
